--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,9 @@ models/*.gguf
 models/*.bin
 models/*.pt
 models/*.safetensors
+# Data pribadi
 data/*
+!data/.keep
 # =========================
 # OS Files
 # =========================
